Implement the feedback until API Key Mangement

--- a/api-reference/api-specifications/api-keys.mdx
+++ b/api-reference/api-specifications/api-keys.mdx
@@ -1,6 +1,6 @@
 ---
 title: 'API Keys'
-description: 'Lear how API keys work on ReDem'
+description: 'Learn how to manage and use API keys within ReDem.'
 icon: "key"
 iconType: "regular"
 ---
