--- a/api-reference/intro/asynchronous-response.mdx
+++ b/api-reference/intro/asynchronous-response.mdx
@@ -8,9 +8,8 @@ iconType: "regular"
 <Info>To integrate with ReDem, you must have a ReDem account. <br /> Don’t have an account yet? Get started by [setting up your account](/account-setup).</Info>
 
 <Steps titleSize="h3">
-  <Step title="Login and create an API key">
-    Log in to your ReDem account and navigate to the account settings.
-    Generate a new API key and copy it for use.
+  <Step title="Request an API key">
+    Contact us at support@redem.io to request an API key.
   </Step>
 
   <Step title="Prepare your request data">
@@ -30,7 +29,7 @@ iconType: "regular"
           "answer": "We were at Lake Garda in Italy",
           "keywords": ["Beach", "Mountains", "Lake", "Museums", "Europe", "Asia", "Destination"],
           "activateDuplicateDetection": true,
-          "allowedLanguages": ["en", "de", "it"]
+          "allowedLanguages": ["en"]
         },
         {
           "qualityCheck": "TS",
@@ -46,8 +45,11 @@ iconType: "regular"
           "score": 60,
           "minDataPoints":2,
           "categories": {
-            "genericAnswers": {"exclude": false, "minDataPoints":2},
-            "noInformation": {"exclude": false, "minDataPoints":2},
+            "BAD_LANGUAGE": {"exclude": true, "minDataPoints":2},
+            "NONSENSE": {"exclude": true, "minDataPoints":2},
+            "WRONG_TOPIC": {"exclude": true, "minDataPoints":2},
+            "WRONG_LANGUAGE": {"exclude": true, "minDataPoints":2},
+            "AI_GENERATED_ANSWER": {"exclude": true, "minDataPoints":2},
             // ... other categories ...
           }
         },
@@ -59,11 +61,11 @@ iconType: "regular"
     }
     ```
 
-    <Note>For a complete example and more information on how to use this request object, visit the [Add Respondent](/api-reference/endpoint/addRespondent) endpoint. It provides detailed explanations of all fields and their usage.</Note>
+    <Note>For a full example and detailed guidance on using this request object, visit the [Add Respondent](/api-reference/endpoint/addRespondent) endpoint. It includes explanations of all fields and their usage.</Note>
   </Step>
 
   <Step title="Make an API request">
-    <p>Submit an API request to ReDem, including the respondent's information and the API key</p>
+    <p> At the end of the survey, just before the respondent reaches the ‘complete’ state, submit an API request to ReDem including the respondent’s information and your API key.</p>
 
     ```javascript Example request (JavaScript)
     const options = {
@@ -78,10 +80,9 @@ iconType: "regular"
       .catch(err => console.error(err));
     ```
 
-    <Note>For a complete example and more information on how to send the request, visit the [Add Respondent](/api-reference/endpoint/addRespondent) endpoint. It provides detailed explanations of all fields and their usage.</Note>
   </Step>
 
-  <Step title="Interpret the API Response">
+  <Step title="Use the ReDem API response to trigger your next step">
     <p>Retrieve the response from ReDem to ensure your request was successfully submitted and is still in progress.</p>
 
     ```javascript Example response (JavaScript)
@@ -89,12 +90,12 @@ iconType: "regular"
         "success": true,
         "message": "Respondent Queued for Evaluation",
         "results": {
-          "status": "JOB_PROCESSING"
+          "status": "QUEUED"
         }
       }
     ```
 
-    <Note>For a complete example and more information on how to use this response object, visit the [Add Respondent](/api-reference/endpoint/addRespondent) endpoint. It provides detailed explanations of all fields and their usage.</Note>
+    <Note>For a full example and detailed guidance on using this response object, visit the [Add Respondent](/api-reference/endpoint/addRespondent) endpoint. It includes explanations of all fields and their usage.</Note>
   </Step>
 
   <Step title="Synchronize respondent evaluations">
