--- a/api-reference/intro/introduction.mdx
+++ b/api-reference/intro/introduction.mdx
@@ -7,7 +7,7 @@ iconType: "regular"
 
 **Welcome to the ReDem API documentation! 👋🏼**
 
-This documentation provides a set-by-step guide to help you unlock the full potential of ReDem by seamlessly integrating the ReDem API into your workflows and applications.
+This documentation provides a step-by-step approach to seamlessly integrating the ReDem API into your workflows and applications.
 
 The backbone of our platform is the ReDem API. With our API you have direct access to every feature ReDem offers from real-time data access to smooth integration with your existing applications.
 
@@ -19,11 +19,11 @@ The ReDem API supports two main integration use cases, allowing you to choose th
 
 <CardGroup cols={2}>
   <Card title="Synchronous Response" icon="arrow-up-arrow-down" href="/api-reference/intro/synchronous-response">
-    Get instant feedback on survey responses and data quality scores directly in your application.
+    Receive an instant evaluation of the respondent’s quality and seamlessly integrate this data into your workflow.
   </Card>
 
   <Card title="Asynchronous Response" icon="arrows-rotate" href="/api-reference/intro/asynchronous-response">
-    Automatically synchronize data quality scores with your systems at regular intervals for continuous analysis.
+    Process respondent quality evaluations in the background and retrieve results later using the Get Respondent/s endpoints.
   </Card>
 </CardGroup>
 
@@ -39,4 +39,4 @@ https://api.redem.io/
 
 <Note>ReDem’s API is currently in public beta and is subject to change. However, we will do our best to keep breaking changes to a minimum. </Note>
 
-If you have any questions or need assistance, don’t hesitate to reach out to our support team at [support@redem.io](mailto:support@redem.io). We’re here to help you get the most out of ReDem!
+Need help or have questions? Contact our support team at [support@redem.io](mailto:support@redem.io). we’re here to help you make the most of ReDem!
