--- a/api-reference/others/change-log.mdx
+++ b/api-reference/others/change-log.mdx
@@ -1,6 +1,6 @@
 ---
 title: 'Change Log'
-description: 'Learn about the changes in the API'
+description: 'Stay updated on the latest changes and improvements in the API.'
 icon: "bullhorn"
 iconType: "regular"
 ---
