--- a/welcome.mdx
+++ b/welcome.mdx
@@ -17,13 +17,13 @@ If you're new to ReDem, start by [setting up your account](/account-setup). Foll
 
 ## Learn how ReDem works
 
-Explore our detailed step-by-step guide to gain a clear understanding of [how ReDem works](/how-it-works) and what it can achieve.
+Follow our step-by-step guide to understand [how ReDem works](/how-it-works).
 
 ## Next steps
 
 <CardGroup cols={2}>
-  <Card title="Explore Quality Checks" icon="hundred-points" href="/quality-checks/redem-score">
-    Discover the comprehensive quality checks ReDem performs to deliver exceptional data quality.
+  <Card title="Explore Quality Checks" icon="hundred-points" href="/knowledge-base/quality-checks/redem-score">
+    Discover the quality checks ReDem performs to ensure reliable and high-quality data.
   </Card>
 
   {/* <Card title="Import your first survey data" icon="file-import" href="/features/data-import">
@@ -31,10 +31,10 @@ Explore our detailed step-by-step guide to gain a clear understanding of [how Re
   </Card> */}
 
   <Card title="Explore the API Reference" icon="code" href="/api-reference">
-    Refer to the API documentation for detailed insights into request and response formats.
+    Check our API documentation to learn how to integrate ReDem with your survey tool.
   </Card>
 
-  <Card title="Discover Cleaning" icon="broom-wide" href="/features/cleaning-and-review">
+  <Card title="Discover Cleaning" icon="broom-wide" href="/knowledge-base/features/cleaning-and-review">
     Discover how ReDem makes data cleaning easier.
   </Card>
 
@@ -49,4 +49,4 @@ Explore our detailed step-by-step guide to gain a clear understanding of [how Re
 
 <br />
 
-If you have questions or need assistance, contact our support team at[support@redem.io](mailto:support@redem.io). We're here to help you make the most of ReDem!
+If you have questions or need assistance, contact our support team at [info@redem.io](mailto:info@redem.io). We're here to help you make the most of ReDem!
