Update account setup description and adjust documentation paths for knowledge base consistency

--- a/account-setup.mdx
+++ b/account-setup.mdx
@@ -1,6 +1,6 @@
 ---
 title: "Account Setup"
-description: "Join ReDem and get started today. "
+description: "Join ReDem and get started in just a few steps."
 icon: "rocket"
 iconType: "regular"
 ---
