Revise account setup and how-it-works documentation for clarity and consistency
- Updated the account setup instructions for improved readability and accuracy, including changes to registration links and phrasing.
- Enhanced the how-it-works section to better describe the data evaluation process and the steps involved in using ReDem, focusing on clarity and user guidance.

--- a/account-setup.mdx
+++ b/account-setup.mdx
@@ -7,18 +7,18 @@ iconType: "regular"
 
 ## Sign Up and Get Started
 
-Get started with ReDem by creating your account. The setup is fast and straightforward - follow these steps to begin:
+To start using ReDem, simply create your account. The setup process is quick and straightforward:
 
-1. Go to the [registration page ](https://app.redem.io/register).
+1. Go to the [registration page ](https://app.beta.redem.io/auth/register).
 
-2. Fill in your organization's name, your first and last name, Email and choose a password.
+2. Enter your organization’s name, your first and last name, email address, and choose a password.
 
-3. Click “Register now for free” to complete the registration process.
+3. Click “Register” to complete your registration.
 
-We will then contact you to find out about your preferred [subscription](https://redem.io/en/pricing/). After it is booked, you’ll receive an email with an activation link. Click the link to activate your account and start using ReDem right away! 🎊
+Once registered, we’ll contact you to confirm your preferred subscription. After your plan is activated, you’ll receive an email with an activation link. Click the link to activate your account and start using ReDem. 🎊
 
 ## Want to learn more?
 
-[Book a demo](https://meetings.hubspot.com/j-redem/get-to-know-redem) with our founding team to explore how ReDem can elevate your workflow!
+[Book a demo](https://meetings.hubspot.com/j-redem/get-to-know-redem) with our management team to see how ReDem can support your workflow.
 
-**We’re thrilled to have you join the ReDem community!**  From day one, we’re here to make sure you have everything you need for a smooth and successful experience.
+We’re glad to have you on board. Our team is happy to support.
