--- a/how-it-works.mdx
+++ b/how-it-works.mdx
@@ -5,21 +5,19 @@ icon: "fire"
 iconType: "regular"
 ---
 
-ReDem ensures data quality at every stage, from survey design to final data output. It starts by crafting questionnaires to unlock the full power of technological fraud detection, followed by seamless data import options, advanced AI-driven quality checks, and automated cleaning based on the ReDem-Score for reliable results.
+ReDem helps you evaluate and clean survey data through a structured step-by-step process. From importing data to exporting cleaned results, each step helps you spot fraud, check quality, and make sure your data is reliable.
 
 <Steps titleSize="h3">
   <Step title="Prepare questionnaire">
-    Advise is given how to strategically design your questionnaire in order to maximize the effectiveness in fraud detection.
+    Design your survey to support ReDem’s quality checks. A well-structured questionnaire maximizes the effectiveness of fraud detection.
 
     <Card title="Learn more about the ReDem recommended criteria for questionnaires" icon="clipboard-check" href="/knowledge-base/miscellaneous/questionnaire-criteria" horizontal />
   </Step>
 
   <Step title="Import data">
-    Data quality checks can be conducted in real time using our API or directly within survey software where ReDem is integrated. Alternatively, data can be quickly and easily uploaded via an Excel file in the ReDem application.
+    By integrating our API with your survey software, you can seamlessly import data into ReDem and perform real-time quality checks.
 
-    **🔥 Start by importing your first survey data:**
-
-    <CardGroup cols={2}>
+    <CardGroup cols={1}>
       {/* <Card title="Manual Data Import" icon="file-import">
         Easily bring your survey data into ReDem by manually uploading it through the ReDem Application!
       </Card> */}
@@ -31,10 +29,14 @@ ReDem ensures data quality at every stage, from survey design to final data outp
   </Step>
 
   <Step title="Measure data quality">
-    <p>Comprehensive AI-based quality checks are performed and data quality is calculated.</p>
+    AI-driven checks in ReDem evaluate survey responses, detect fraud, and generate a ReDem Score for each respondent.
+
+    <Card title="Learn more about the ReDem Score" icon="clipboard-check" href="/knowledge-base/quality-checks/redem-score" horizontal />
   </Step>
 
   <Step title="Clean and export">
-    <p>The data is automatically cleaned according to our ReDem-Score and can then either be exported as an Excel file or transferred to the survey software.</p>
+    Based on your configured cleaning settings, ReDem automatically cleans your data and can either be sent back to your survey platform or exported as a CSV file.
+
+    <Card title="Learn more about the ReDem cleaning settings" icon="clipboard-check" href="/knowledge-base/features/cleaning-and-review" horizontal />
   </Step>
 </Steps>
