Update ReDem Credits documentation for improved clarity and structure
- Enhanced explanations of credit calculation rules, breaking down complex points into clearer sub-bullets.
- Revised language for better readability, ensuring users understand credit costs and conditions.
- Updated the Credit Calculation Example image to reflect recent changes.

--- a/knowledge-base/miscellaneous/redem-credits.mdx
+++ b/knowledge-base/miscellaneous/redem-credits.mdx
@@ -81,15 +81,24 @@ The following list provides a clear overview of how credits are calculated based
 
 ### 💡Important Credit Rules
 
-* **Grid-Question Score (GQS):** The cost for each grid-question item is **0.05 credits**, but the total charge for GQS per respondent is capped at **2 credits**, regardless of the number of items they have.
+* **Grid-Question Score (GQS):** 
+  * Each grid item costs 0.05 credits.
+  * The total cost for GQS is capped at 2 credits per respondent, regardless of how many items are answered.
 
-* **Time Score (TS):** The maximum cost is **1 credit per respondent**, regardless of the number of time-related data points included.
+* **Time Score (TS):** 
+  * The maximum cost is 1 credit per respondent, regardless of the number of time-based data points analyzed.
 
-* **Coherence Score (CHS):** The base calculation includes a maximum of **100 questions**, costing **4 credits** per respondent. For each additional question beyond 100, an extra cost of **0.03 credits** applies.
+* **Coherence Score (CHS):** 
+  * Covers up to 100 questions at a base cost of 4 credits per respondent.
+  * For each additional question beyond 100, an extra 0.03 credits is charged.
 
-* **No Credits for Empty Answers or Missing Values:** Credits are applied only to valid, present data points. No credits are charged for empty responses or missing values.
+* **Credits are applied only to valid and available data points.**
 
-* **Total Credit Calculation for Surveys**: The total cost of a survey is calculated by summing the credit costs for all respondents. Each respondent's credit usage is based on their individual data points and the quality checks applied.
+* **No credits are charged for blank or missing responses.**
+
+* **Total Credit Calculation for Surveys**:
+  * The total credit cost for a survey is the sum of credits used across all respondents.
+  * Each respondent’s usage depends on their individual data and the quality checks applied.
 
 <br />
 
