--- a/knowledge-base/quality-checks/redem-score.mdx
+++ b/knowledge-base/quality-checks/redem-score.mdx
@@ -1,36 +1,44 @@
 ---
 title: "ReDem Score"
-description: "Discover the ReDem Total Quality Score and its dimensions."
+description: "An Integrated Assessment of Data Quality"
 icon: "hundred-points"
 iconType: "regular"
 ---
 
-## 360-degree data quality assessment
+## Comprehensive Quality Evaluation
 
-At the core of ReDem lies a 360-degree approach, enabling us to analyze interviews from every possible perspective. Each interview undergoes rigorous quality checks, culminating in the ReDem Score (R-Score). This score integrates all relevant quality criteria, offering a transparent and objective assessment of data quality in survey responses. With ReDem, every questionnaire becomes a sophisticated web of safeguards, making it nearly impossible for fraudsters to go undetected.
+The ReDem Total Quality Score (R-Score) provides a multidimensional evaluation of data quality in open-ended and close-ended survey responses. Built on a 360-degree assessment framework, each respondent’s data is systematically analyzed across multiple quality dimensions.
 
 <img classname="hidden dark:block" src="/images/Quality-Checks.png" />
 
-### The five dimensions of the ReDem Score:
+## Objective and Transparent Scoring
+
+The R-Score consolidates a broad range of quality indicators into a single, interpretable metric. This includes automated checks for inconsistencies, duplications, unnatural response patterns, language compliance, and other behavioral markers indicative of low-quality or fraudulent input.
+
+## Robust Against Fraudulent Responses
+
+By embedding quality control mechanisms throughout the survey process, ReDem ensures that data integrity is maintained at every step. This systematic approach minimizes the risk of undetected manipulation and provides researchers with a reliable basis for downstream analyses.
+
+### The Subscores of the ReDem Score
 
 <CardGroup cols={2}>
   <Card title="Open-Ended Score" icon="messages" href="/quality-checks/open-ended-score">
-    The Open-Ended Score (OES) is an AI-powered assessment of the quality of responses to open-ended questions.
+    Evaluates the quality of open-ended answers using AI. It considers factors such as relevance, duplication, and potential AI generation to detect inattentive, generic, or fraudulent responses.
   </Card>
 
   <Card title="Coherence Score" icon="grid-2-plus" href="/quality-checks/coherence-score">
-    The Coherence Score (CS) leverages AI to evaluate the logical consistency, plausibility, and overall coherence of respondent behavior across the entire interview.
+    Assesses the logical consistency and plausibility of a respondent’s answers across the entire interview. This score helps automatically identify contradictions and inconsistencies in response patterns.
   </Card>
 
   <Card title="Time Score" icon="stopwatch" href="/quality-checks/time-score">
-    The Time Score (TS) tracks overall interview duration and time spent on each question, automatically detecting deviations from normal response speeds.
+    Analyzes total interview duration and time spent per question. It flags responses that are too fast, too slow, or show irregular timing patterns compared to the expected baseline.
   </Card>
 
   <Card title="Grid-Question Score" icon="list" href="/quality-checks/grid-question-score">
-    The Grid-Question Score (GQS) uses AI to assess respondents based on their response behavior in one or more matrix questions.
+    Evaluates response behavior in grid questions. It detects different patterns, such as straight-lining or zigzag answering, using machine learning.
   </Card>
 
   <Card title="Behavioral Analytics Score" icon="keyboard" href="/quality-checks/behavior-analysis-score">
-    The Behavioral Analytics Score (BAS) is a quality score designed to evaluate user typing patterns. It analyzes various aspects of typing behavior to distinguish between natural human typing and potentially automated or artificial inputs.
+    Analyzes typing behavior to distinguish natural human input from potentially automated or artificial entries. It considers typing speed, rhythm, and variability to flag suspicious input patterns.
   </Card>
 </CardGroup>
